adding somme transformations

--- a/Experience_1.ipynb
+++ b/Experience_1.ipynb
@@ -401,11 +401,11 @@
     "    plt.title('Training Loss per Epoch')\n",
     "    plt.grid(True)\n",
     "    plt.legend()\n",
-    "    plt.savefig('Training_loss_simclr_with_Horizontal_flip_essai_1.png')\n",
+    "    plt.savefig('Training_loss_simclr_Gaussian_Blur_flip_essai_4.png')\n",
     "    plt.show()\n",
     "\n",
     "# Exemple d'appel de la fonction avec les groupes actifs\n",
-    "training(train_loader, test_loader, 70, active_groups=[\"RandomHorizontalFlip\"])\n"
+    "training(train_loader, test_loader, 70, active_groups=[\"translations\"])\n"
    ]
   },
   {
