--- a/Data_Augmentation_Evaluation.ipynb
+++ b/Data_Augmentation_Evaluation.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,9 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 3, 255, 255])\n"
+     ]
+    }
+   ],
    "source": [
     "# Fonction pour choisir une transformation aléatoire parmi les groupes sélectionnés\n",
     "def random_choose(transformation_list):\n",
@@ -333,17 +341,59 @@
     "    first_batch_tensor = torch.stack(first_batch)\n",
     "    second_batch_tensor = torch.stack(second_batch)\n",
     "    \n",
-    "    return first_batch_tensor, second_batch_tensor\n"
+    "    return first_batch_tensor, second_batch_tensor\n",
+    "\n",
+    "test = next(iter(train_loader))[0]\n",
+    "print(test.shape)\n",
+    "batch_1, batch_2  =  generate_batch(test, active_groups=['Bad_Mixed'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 255, 255])\n"
+     ]
+    }
+   ],
    "source": [
+    "print(batch_1[0].shape)\n",
     "from lightly.loss import NTXentLoss"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "torch.Size([2, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [[2,3,4],[4,2,5]]\n",
+    "a = np.array(a)\n",
+    "print(a.shape)\n",
+    "a = torch.from_numpy(a)\n",
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
